spacing fix

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -161,14 +161,14 @@
 .box-row1-text
   position: absolute
   top: 0
-  left: 620
+  left: 620px
   width: 380px
   height: 300px
 
 .box-row2-image
   position: absolute
   top: 0
-  right: 400px
+  left: 400px
   width: 600px
   height: 300px
 
